--- a/clusters/fluxcluster/demo2/demo2-source-git.yaml
+++ b/clusters/fluxcluster/demo2/demo2-source-git.yaml
@@ -9,6 +9,6 @@ spec:
   ref:
     branch: main
   url: https://github.com/ravilnagmetov/demo2
-  refSecretRef:
+  secretRef:
     name: github-secret
 
