--- a/clusters/fluxcluster/demo/demo-hr-git.yaml
+++ b/clusters/fluxcluster/demo/demo-hr-git.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: nginx
+      chart: ./
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: GitRepository
